; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_time.c_linux_to_native_timerflags.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_time.c_linux_to_native_timerflags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LINUX_TIMER_ABSTIME = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@TIMER_ABSTIME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @linux_to_native_timerflags(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @LINUX_TIMER_ABSTIME, align 4
  %8 = xor i32 %7, -1
  %9 = and i32 %6, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @EINVAL, align 4
  store i32 %12, i32* %3, align 4
  br label %25

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  store i32 0, i32* %14, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @LINUX_TIMER_ABSTIME, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %13
  %20 = load i32, i32* @TIMER_ABSTIME, align 4
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* %21, align 4
  %23 = or i32 %22, %20
  store i32 %23, i32* %21, align 4
  br label %24

24:                                               ; preds = %19, %13
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %11
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
